--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
   },
   "license": "WTFPL",
   "author": "LevX <team@levx.io>",
+  "files": [
+    "abis",
+    "contracts",
+    "deployments",
+    "typechain"
+  ],
   "scripts": {
     "build": "rimraf abis artifacts cache coverage typechain && hardhat compile",
     "console": "hardhat console",
@@ -96,5 +102,5 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0"
   },
-  "version": "1.0.0"
+  "version": "1.0.1"
 }
