--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@nomiclabs/hardhat-etherscan": "^2.1.0",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@sushiswap/sdk": "^3.0.5",
     "@tenderly/hardhat-tenderly": "^1.0.0",
     "@typechain/ethers-v5": "^7.0.1",
     "@typechain/hardhat": "^2.0.2",
@@ -93,6 +94,7 @@
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.1",
     "prettier-plugin-solidity": "^1.0.0-beta.3",
+    "readline-sync": "^1.4.10",
     "solidity-coverage": "^0.7.0",
     "ts-generator": "^0.1.0",
     "ts-node": "^10.0.0",
